Document "ice.cream" module